--- a/Templates/Galileo/src/assets/css/includes/_yue.scss
+++ b/Templates/Galileo/src/assets/css/includes/_yue.scss
@@ -96,7 +96,7 @@
     height: 16px;
     padding: 4px;
     background-color: rgba(0,0,0,.18);
-    color: #fff;
+    color: #fff!important;
     border-radius: 14px;
     &:hover {
       background-color: $black;
